add documentation and fix NSE variables to use either .data or "var", as recommended by https://cran.r-project.org/web/packages/dplyr/vignettes/in-packages.html

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: This package standardizes functions for one and two sample
     It also includes several ggplot2 customizations to standardize and
     simplify use of common plotting needs.
 License: GPL (>= 3)
+Imports: ggplot2, gt, broom, beeswarm, stringr, tidyr, dplyr, forcats, tibble, rlang, purrr, cli
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
