--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,7 @@ Imports: ggplot2, gt, gtsummary, broom, lubridate, beeswarm, car, emmeans, multc
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
