tell it we need multcompView

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(gtsummary,tbl_summary)
 importFrom(gtsummary,with_gtsummary_theme)
 importFrom(lubridate,today)
 importFrom(multcomp,cld)
+importFrom(multcompView,multcompLetters)
 importFrom(purrr,is_list)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
