make my function as_gt instead of conflicting with original

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 S3method(as.data.frame,atest)
 S3method(as_atest,data.frame)
 S3method(as_atest,summary_emm)
+S3method(as_gt,atest)
+S3method(as_gt,default)
 S3method(as_tibble,atest)
-S3method(gt,atest)
-S3method(gt,default)
 S3method(independence_test,default)
 S3method(independence_test,formula)
 S3method(one_proportion_test,default)
@@ -14,6 +14,7 @@ S3method(print,atest)
 S3method(tidy,atest)
 S3method(two_proportion_test,default)
 S3method(two_proportion_test,formula)
+export(as_gt)
 export(binomial_test)
 export(combine_tests)
 export(correlation_test)
@@ -22,7 +23,6 @@ export(fmt_pvalue)
 export(format_pvalue)
 export(geom_beeswarm)
 export(geom_smooth_binomial)
-export(gt)
 export(hide_y_axis)
 export(independence_test)
 export(model_anova)
