knit_print setup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(as_gt,default)
 S3method(as_tibble,atest)
 S3method(independence_test,default)
 S3method(independence_test,formula)
+S3method(knit_print,atest)
 S3method(one_proportion_test,default)
 S3method(one_proportion_test,formula)
 S3method(print,atest)
@@ -66,6 +67,7 @@ importFrom(gtsummary,all_continuous)
 importFrom(gtsummary,as_gt)
 importFrom(gtsummary,tbl_summary)
 importFrom(gtsummary,with_gtsummary_theme)
+importFrom(knitr,knit_print)
 importFrom(lubridate,today)
 importFrom(multcomp,cld)
 importFrom(multcompView,multcompLetters)
