--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(stats,fisher.test)
 importFrom(stats,p.adjust)
 importFrom(stats,prop.test)
 importFrom(stats,t.test)
+importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
