need := to rename to a variable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(multcompView,multcompLetters)
 importFrom(purrr,is_list)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,is_interactive)
 importFrom(rstudioapi,isAvailable)
