--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(multcomp,cld)
 importFrom(multcompView,multcompLetters)
 importFrom(purrr,is_list)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,map_dfr)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
