need pivot_longer for the new simplify

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,5 +92,6 @@ importFrom(stats,t.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
 importFrom(tidyr,nest)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unnest)
 importFrom(utils,combn)
