--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(stats,cor.test)
 importFrom(stats,fisher.test)
 importFrom(stats,p.adjust)
 importFrom(stats,prop.test)
+importFrom(stats,setNames)
 importFrom(stats,t.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
