rename to descriptive_statistics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(as_gt)
 export(binomial_test)
 export(combine_tests)
 export(correlation_test)
+export(descriptive_statistics)
 export(fmt_numbers)
 export(fmt_pvalue)
 export(format_pvalue)
@@ -41,7 +42,6 @@ export(pairwise_model_slopes)
 export(pairwise_proportion_test)
 export(pairwise_t_test)
 export(position_beeswarm)
-export(summarize_variables)
 export(tab_compact)
 export(tab_padding)
 export(two_proportion_test)
