updated as_gt documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ S3method(as.data.frame,atest)
 S3method(as_atest,data.frame)
 S3method(as_atest,summary_emm)
 S3method(as_gt,atest)
+S3method(as_gt,data.frame)
 S3method(as_gt,default)
+S3method(as_gt,gt_tbl)
+S3method(as_gt,gtsummary)
 S3method(as_tibble,atest)
 S3method(independence_test,default)
 S3method(independence_test,formula)
