add conflicted package, for demonstration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(tab_padding)
 export(two_proportion_test)
 export(two_t_test)
 export(wilson_test)
+import(conflicted)
 import(dplyr)
 import(ggplot2)
 import(gt)
