--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,11 @@ Description: Standardized functions and output for one and two sample
 Language: en-US
 License: GPL (>= 3)
 Imports: 
-  ggplot2, gt, gtsummary, broom, lubridate, beeswarm, 
+  ggplot2, gt, gtsummary, broom, beeswarm, 
   car, emmeans, multcomp, multcompView, stringr, tidyr, 
   dplyr, forcats, tibble, rlang, purrr, cli, rstudioapi, knitr
 Suggests: 
-  tidyverse, conflicted, patchwork, rmarkdown
+  tidyverse, conflicted, patchwork, rmarkdown, lubridate
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
