new logistic plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(fmt_numbers)
 export(fmt_pvalue)
 export(format_pvalue)
 export(geom_beeswarm)
-export(geom_smooth_binomial)
+export(geom_smooth_logistic)
 export(hide_y_axis)
 export(independence_test)
 export(model_anova)
@@ -45,6 +45,7 @@ export(pairwise_model_slopes)
 export(pairwise_proportion_test)
 export(pairwise_t_test)
 export(position_beeswarm)
+export(scale_y_binary)
 export(tab_compact)
 export(tab_padding)
 export(two_proportion_test)
