--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,12 +83,14 @@ importFrom(rlang,.data)
 importFrom(rlang,is_interactive)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,navigateToFile)
+importFrom(scales,new_transform)
 importFrom(stats,as.formula)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
 importFrom(stats,cor.test)
 importFrom(stats,fisher.test)
+importFrom(stats,glm)
 importFrom(stats,p.adjust)
 importFrom(stats,prop.test)
 importFrom(stats,setNames)
