document geom_bars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(descriptive_statistics)
 export(fmt_numbers)
 export(fmt_pvalue)
 export(format_pvalue)
+export(geom_bars)
 export(geom_beeswarm)
 export(geom_smooth_logistic)
 export(hide_y_axis)
