for diagnostic plots and pedogogical functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,12 +23,14 @@ export(binomial_test)
 export(combine_tests)
 export(correlation_test)
 export(descriptive_statistics)
+export(diag_plots)
 export(fmt_numbers)
 export(fmt_pvalue)
 export(format_pvalue)
 export(geom_bars)
 export(geom_beeswarm)
 export(geom_smooth_logistic)
+export(guess_cor)
 export(hide_y_axis)
 export(independence_test)
 export(model_anova)
@@ -46,6 +48,8 @@ export(pairwise_model_slopes)
 export(pairwise_proportion_test)
 export(pairwise_t_test)
 export(position_beeswarm)
+export(sample_data)
+export(sample_lm)
 export(scale_y_binary)
 export(tab_compact)
 export(tab_padding)
@@ -57,6 +61,7 @@ import(ggplot2)
 import(gt)
 import(stringr)
 importFrom(beeswarm,swarmx)
+importFrom(broom,augment)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(car,Anova)
@@ -75,6 +80,7 @@ importFrom(gtsummary,with_gtsummary_theme)
 importFrom(knitr,knit_print)
 importFrom(multcomp,cld)
 importFrom(multcompView,multcompLetters)
+importFrom(patchwork,wrap_plots)
 importFrom(purrr,is_list)
 importFrom(purrr,map)
 importFrom(purrr,map2)
@@ -89,11 +95,17 @@ importFrom(stats,as.formula)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
+importFrom(stats,cor)
 importFrom(stats,cor.test)
 importFrom(stats,fisher.test)
 importFrom(stats,glm)
+importFrom(stats,lm)
 importFrom(stats,p.adjust)
+importFrom(stats,printCoefmat)
 importFrom(stats,prop.test)
+importFrom(stats,rbeta)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(stats,t.test)
 importFrom(tibble,as_tibble)
