--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,6 +27,7 @@ reference:
 - contents:
   - correlation_test
   - matches("model")
+  - diag_plots
 - title: Output
   desc: To control output from statistical tests
 - contents:
@@ -38,6 +39,8 @@ reference:
 - contents:
   - descriptive_statistics
   - new_assignment
+  - sample_lm
+  - guess_cor
 - title: Graphics
 - contents:
   - geom_beeswarm
