--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ importFrom(stats,as.formula)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
+importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cor.test)
 importFrom(stats,fisher.test)
@@ -104,9 +105,11 @@ importFrom(stats,p.adjust)
 importFrom(stats,printCoefmat)
 importFrom(stats,prop.test)
 importFrom(stats,rbeta)
+importFrom(stats,rexp)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(stats,summary.lm)
 importFrom(stats,t.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
