--- a/dev/config_attachment.yaml
+++ b/dev/config_attachment.yaml
@@ -4,7 +4,7 @@ dir.r: R
 dir.v: vignettes
 dir.t: tests
 extra.suggests: [tidyverse, conflicted, lubridate]
-pkg_ignore: ~
+pkg_ignore: grDevices
 document: yes
 normalize: yes
 inside_rmd: no
