use rlang directly instead of cli, to need to import one fewer package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,6 @@ importFrom(broom,augment)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(car,Anova)
-importFrom(cli,cli_warn)
 importFrom(emmeans,emmeans)
 importFrom(emmeans,emtrends)
 importFrom(forcats,as_factor)
@@ -87,7 +86,10 @@ importFrom(purrr,map2)
 importFrom(purrr,map_dfr)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rlang,abort)
+importFrom(rlang,inform)
 importFrom(rlang,is_interactive)
+importFrom(rlang,warn)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,navigateToFile)
 importFrom(scales,new_transform)
