--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(forcats,fct_rev)
 importFrom(graphics,pairs)
 importFrom(gt,px)
 importFrom(gt,tab_options)
+importFrom(gtsummary,all_categorical)
 importFrom(gtsummary,all_continuous)
 importFrom(gtsummary,as_gt)
 importFrom(gtsummary,tbl_summary)
