need for two sample proportion test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(car,Anova)
 importFrom(emmeans,emmeans)
 importFrom(emmeans,emtrends)
 importFrom(forcats,as_factor)
+importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_rev)
 importFrom(graphics,pairs)
 importFrom(gt,px)
