add code to handle decimal places by SE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(position_beeswarm)
 export(sample_data)
 export(sample_lm)
 export(scale_y_binary)
+export(set_digits)
 export(tab_compact)
 export(tab_padding)
 export(two_proportion_test)
