export format_signif

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(diag_plots)
 export(fmt_numbers)
 export(fmt_pvalue)
 export(format_pvalue)
+export(format_signif)
 export(geom_bars)
 export(geom_beeswarm)
 export(geom_smooth_logistic)
