one_proportion_inference

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ S3method(as_tibble,atest)
 S3method(independence_test,default)
 S3method(independence_test,formula)
 S3method(knit_print,atest)
-S3method(one_proportion_test,default)
-S3method(one_proportion_test,formula)
+S3method(one_proportion_inference,default)
+S3method(one_proportion_inference,formula)
 S3method(print,atest)
 S3method(tidy,atest)
 S3method(two_proportion_test,default)
@@ -39,7 +39,7 @@ export(model_glance)
 export(model_means)
 export(model_slopes)
 export(new_assignment)
-export(one_proportion_test)
+export(one_proportion_inference)
 export(one_t_test)
 export(paired_proportion_test)
 export(paired_t_test)
