two_proportion_inference

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,8 @@ S3method(one_proportion_inference,default)
 S3method(one_proportion_inference,formula)
 S3method(print,atest)
 S3method(tidy,atest)
-S3method(two_proportion_test,default)
-S3method(two_proportion_test,formula)
+S3method(two_proportion_inference,default)
+S3method(two_proportion_inference,formula)
 export(as_gt)
 export(binomial_test)
 export(combine_tests)
@@ -41,11 +41,11 @@ export(model_slopes)
 export(new_assignment)
 export(one_proportion_inference)
 export(one_t_test)
-export(paired_proportion_test)
+export(paired_proportion_inference)
 export(paired_t_test)
 export(pairwise_model_means)
 export(pairwise_model_slopes)
-export(pairwise_proportion_test)
+export(pairwise_proportion_inference)
 export(pairwise_t_test)
 export(position_beeswarm)
 export(sample_data)
@@ -54,7 +54,7 @@ export(scale_y_binary)
 export(set_digits)
 export(tab_compact)
 export(tab_padding)
-export(two_proportion_test)
+export(two_proportion_inference)
 export(two_t_test)
 export(wilson_test)
 import(dplyr)
