--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,13 +40,13 @@ export(model_means)
 export(model_slopes)
 export(new_assignment)
 export(one_proportion_inference)
-export(one_t_test)
+export(one_t_inference)
 export(paired_proportion_inference)
-export(paired_t_test)
+export(paired_t_inference)
 export(pairwise_model_means)
 export(pairwise_model_slopes)
 export(pairwise_proportion_inference)
-export(pairwise_t_test)
+export(pairwise_t_inference)
 export(position_beeswarm)
 export(sample_data)
 export(sample_lm)
@@ -55,7 +55,7 @@ export(set_digits)
 export(tab_compact)
 export(tab_padding)
 export(two_proportion_inference)
-export(two_t_test)
+export(two_t_inference)
 export(wilson_test)
 import(dplyr)
 import(ggplot2)
