--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ S3method(two_proportion_inference,formula)
 export(as_gt)
 export(binomial_test)
 export(combine_tests)
-export(correlation_test)
+export(correlation_inference)
 export(descriptive_statistics)
 export(diag_plots)
 export(fmt_pvalue)
