import add_stat_label

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(forcats,fct_rev)
 importFrom(graphics,pairs)
 importFrom(gt,px)
 importFrom(gt,tab_options)
+importFrom(gtsummary,add_stat_label)
 importFrom(gtsummary,all_categorical)
 importFrom(gtsummary,all_continuous)
 importFrom(gtsummary,as_gt)
