--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ S3method(as_gt,gtsummary)
 S3method(as_tibble,atest)
 S3method(independence_test,default)
 S3method(independence_test,formula)
+S3method(knit_print,askim_df)
 S3method(knit_print,atest)
 S3method(one_proportion_inference,default)
 S3method(one_proportion_inference,formula)
+S3method(print,askim_df)
 S3method(print,atest)
 S3method(tidy,atest)
 S3method(two_proportion_inference,default)
@@ -52,6 +54,7 @@ export(sample_data)
 export(sample_lm)
 export(scale_y_binary)
 export(set_digits)
+export(skim)
 export(tab_compact)
 export(tab_padding)
 export(two_proportion_inference)
@@ -80,7 +83,9 @@ importFrom(gtsummary,all_continuous)
 importFrom(gtsummary,as_gt)
 importFrom(gtsummary,tbl_summary)
 importFrom(gtsummary,with_gtsummary_theme)
+importFrom(htmltools,HTML)
 importFrom(knitr,knit_print)
+importFrom(markdown,mark_html)
 importFrom(multcomp,cld)
 importFrom(multcompView,multcompLetters)
 importFrom(patchwork,wrap_plots)
@@ -97,6 +102,7 @@ importFrom(rlang,warn)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,navigateToFile)
 importFrom(scales,new_transform)
+importFrom(skimr,skim)
 importFrom(stats,as.formula)
 importFrom(stats,binom.test)
 importFrom(stats,binomial)
