import functions for skim properly

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,9 @@ Imports:
     graphics,
     gt,
     gtsummary,
+    htmltools,
     knitr,
+    markdown,
     multcomp,
     multcompView,
     patchwork,
@@ -30,6 +32,7 @@ Imports:
     rlang,
     rstudioapi,
     scales,
+    skimr,
     stats,
     stringr,
     tibble,
