--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,9 +60,11 @@ export(tab_padding)
 export(two_proportion_inference)
 export(two_t_inference)
 export(wilson_test)
+import(df_name)
 import(dplyr)
 import(ggplot2)
 import(gt)
+import(skimr)
 import(stringr)
 importFrom(beeswarm,swarmx)
 importFrom(broom,augment)
