should have been importFrom...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,11 +60,9 @@ export(tab_padding)
 export(two_proportion_inference)
 export(two_t_inference)
 export(wilson_test)
-import(df_name)
 import(dplyr)
 import(ggplot2)
 import(gt)
-import(skimr)
 import(stringr)
 importFrom(beeswarm,swarmx)
 importFrom(broom,augment)
@@ -104,6 +102,7 @@ importFrom(rlang,warn)
 importFrom(rstudioapi,isAvailable)
 importFrom(rstudioapi,navigateToFile)
 importFrom(scales,new_transform)
+importFrom(skimr,df_name)
 importFrom(skimr,skim)
 importFrom(stats,as.formula)
 importFrom(stats,binom.test)
