need to set to asis_output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ importFrom(gtsummary,as_gt)
 importFrom(gtsummary,tbl_summary)
 importFrom(gtsummary,with_gtsummary_theme)
 importFrom(htmltools,HTML)
+importFrom(knitr,asis_output)
 importFrom(knitr,knit_print)
 importFrom(markdown,mark_html)
 importFrom(multcomp,cld)
