rename to options

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,7 +11,7 @@ articles:
   - proportions
   - means
   - models
-  - output
+  - options
 reference:
 - title: Tests for Proportions
 - contents:
