--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(model_anova)
 export(model_coefs)
 export(model_glance)
 export(model_means)
+export(model_predictions)
 export(model_slopes)
 export(new_assignment)
 export(one_proportion_inference)
@@ -127,6 +128,7 @@ importFrom(stats,summary.lm)
 importFrom(stats,t.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
+importFrom(tidyr,expand_grid)
 importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unnest)
