update nonparametric documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(geom_smooth_logistic)
 export(guess_cor)
 export(hide_y_axis)
 export(independence_test)
+export(kruskal_wallis_test)
 export(model_anova)
 export(model_coefs)
 export(model_glance)
@@ -44,12 +45,15 @@ export(model_slopes)
 export(new_assignment)
 export(one_proportion_inference)
 export(one_t_inference)
+export(one_wilcoxon_inference)
 export(paired_proportion_inference)
 export(paired_t_inference)
+export(paired_wilcoxon_inference)
 export(pairwise_model_means)
 export(pairwise_model_slopes)
 export(pairwise_proportion_inference)
 export(pairwise_t_inference)
+export(pairwise_wilcoxon_inference)
 export(position_beeswarm)
 export(sample_data)
 export(sample_lm)
@@ -60,6 +64,7 @@ export(tab_compact)
 export(tab_padding)
 export(two_proportion_inference)
 export(two_t_inference)
+export(two_wilcoxon_inference)
 export(wilson_test)
 import(dplyr)
 import(ggplot2)
