--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ export(tab_compact)
 export(tab_padding)
 export(two_proportion_inference)
 export(two_t_inference)
+export(two_t_margin_error)
+export(two_t_power)
 export(two_wilcoxon_inference)
 export(wilson_test)
 import(dplyr)
