refresh names of power functions, add equivalence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,8 +64,9 @@ export(tab_compact)
 export(tab_padding)
 export(two_proportion_inference)
 export(two_t_inference)
-export(two_t_margin_error)
 export(two_t_power)
+export(two_t_power_equiv)
+export(two_t_power_me)
 export(two_wilcoxon_inference)
 export(wilson_test)
 import(dplyr)
