missing some imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,10 +123,15 @@ importFrom(stats,cor)
 importFrom(stats,cor.test)
 importFrom(stats,fisher.test)
 importFrom(stats,glm)
+importFrom(stats,kruskal.test)
 importFrom(stats,lm)
+importFrom(stats,model.frame)
 importFrom(stats,p.adjust)
+importFrom(stats,power.t.test)
 importFrom(stats,printCoefmat)
 importFrom(stats,prop.test)
+importFrom(stats,qchisq)
+importFrom(stats,qt)
 importFrom(stats,rbeta)
 importFrom(stats,rexp)
 importFrom(stats,rnorm)
@@ -134,6 +139,8 @@ importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(stats,summary.lm)
 importFrom(stats,t.test)
+importFrom(stats,uniroot)
+importFrom(stats,wilcox.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
 importFrom(tidyr,expand_grid)
